# phase1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/coursera/: car_fueling.py  change.py  covering_segments.py  different_summands.py  dot_product.py  fibonacci.py  fibonacci_huge.py  fibonacci_last_digit.py  fibonacci_partial_sum.py  fibonacci_sum_last_digit.py  fibonacci_sum_squares.py  fractional_knapsack.py  gcd.py  largest_number.py  lcm.py  max_pairwise_product.py  sum_digits.py
tests/: test_car_fueling.py  test_change.py  test_covering_segments.py  test_different_summands.py  test_dot_product.py  test_fibonacci.py  test_fibonacci_huge.py  test_fibonacci_last_digit.py  test_fibonacci_partial_sum.py  test_fibonacci_sum_last_digit.py  test_fibonacci_sum_squares.py  test_fractional_knapsack.py  test_gcd.py  test_largest_number.py  test_lcm.py  test_max_pairwise_product.py  test_sum.py
